--- a/org/header.org
+++ b/org/header.org
@@ -6,9 +6,10 @@
 	<h1>Charlie Braidwood's Webpage</h1>
 	<hr>
 	<nav class="links">
-		  <!-- [<a href='/'>Home</a>] -->
-		  [<a href='https://github.com/cbraidwood'>Github</a>]
-		  [<a href='mailto:charliebraidwood@gmail.com'>Email</a>]
+		  <!-- <a href='/'>Home</a> -->
+		  <a href='https://github.com/cbraidwood'>Github</a>
+		  <a href='mailto:charliebraidwood@gmail.com'>Email</a>
+      <a href='https://www.linkedin.com/in/charlie-braidwood/'>Linkedin</a>
 	</nav>
     <hr>
 </div>
