--- a/org/contact.org
+++ b/org/contact.org
@@ -8,8 +8,10 @@ You can email me at:
 [[mailto:your.email@example.com][<charliebraidwood@gmail.com>]]
 
 If you feel inclined, you can encrypt your message to me using my GPG key below:
+# - [[gpg_key.asc][Download my GPG Public Key (.asc)]]
 
-- [[gpg_key.asc][Download my GPG Public Key (.asc)]]
+#+HTML: <a href='gpg_key.asc'>Download my GPG Public Key (.asc)</a>
+
 - Fingerprint: ~31FD C252 9AA4 8512 5398  619C 9086 3111 0AB1 296C~
 
   
